--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"remixicon": "^4.5.0"
 	}
 }
